<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="6dp"
    android:layout_marginTop="6dp"
    android:layout_marginRight="6dp"
    android:layout_marginBottom="3dp"
    android:text="@string/startup_app_package"
    />
<LinearLayout 
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".70"
        android:layout_margin="6dp"
        android:id="@+id/textStartupAppPackage"
        android:text=""
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:id="@+id/btnLaunch"
        android:text="@string/launch"
        />
</LinearLayout>

<TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="6dp"
    android:layout_marginTop="6dp"
    android:layout_marginRight="6dp"
    android:layout_marginBottom="3dp"
    android:text="@string/startup_cmd"
    />
<EditText
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:id="@+id/textStartupCmd"
    android:text=""
    />
<TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="6dp"
    android:layout_marginTop="6dp"
    android:layout_marginRight="6dp"
    android:layout_marginBottom="3dp"
    android:text="@string/shutdown_cmd"
    />
<EditText
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:id="@+id/textShutdownCmd"
    android:text=""
    />

<LinearLayout 
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:id="@+id/btnCheckCmd"
        android:text="@string/check_cmd"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:id="@+id/btnSave"
        android:text="@string/save"
        />
</LinearLayout>

<TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:singleLine="false"
    android:id="@+id/msgCheck"
    android:text=""
    />
</LinearLayout>

